devops/k8s/prod/analysis/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sos-analysis
  labels:
    name: sos-analysis
